another round of updates, adjustments, and fixes

--- a/archive/context-menu-cleanup.css
+++ b/archive/context-menu-cleanup.css
@@ -35,16 +35,13 @@
     #context-sendlinktodevice,
     #context-bookmarkpage,
     #context-savepage,
-    
+
     #context-searchselect,
 
     #context-viewsource,
     #context-viewpartialsource-selection,
     #context-viewinfo,
-    #context-inspect-a11y,
-
-    #dtaCtxSepFront-direct,
-    .dta-menuitem.dta-turbo
+    #context-inspect-a11y
     {
         display: none;
     }
