--- a/image-view-transparent-background.css
+++ b/image-view-transparent-background.css
@@ -13,7 +13,7 @@
     regexp(      "^moz-extension://.*[.](?:gif|jpe?g|a?png|svg)(?:$|[?#])"/*as:content*/),
     regexp("^(?:https?|file|ftp)://.*[.](?:gif|jpe?g|a?png|svg)(?:$|[?#])"/*as:web*/),
     regexp("^data:image/.*$"/*as:content*/)
-{ @media only screen and (min-width: 600px) { /* exclude subdocuments, esp. SVGs */
+{ @media only screen and (min-width: 600px) and (min-height: 600px) { /* exclude subdocuments, esp. SVGs */
 
 	:root:not([class])>body:not([class])>img.transparent:only-child, /* e.g. PNG */
 	svg:root:only-child /* SVG */
